--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
 tokio = { version="0.2", features=["macros"] }
 futures = "0.3"
+lazy_static = "1.4"
