--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["sorz <me@sorz.org>"]
 edition = "2018"
 
 [dependencies]
-telegram-bot = { git = "https://github.com/telegram-rs/telegram-bot" }
+telegram-bot = { git="https://github.com/sorz/telegram-bot", branch="patch-sticker-unique-id" }
 tokio = { version="0.2", features=["macros"] }
 futures = "0.3"
 lazy_static = "1.4"
