--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ teloxide = { version = "0.4", features = ["auto-send", "native-tls"] }
 tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
 futures = "0.3"
 lazy_static = "1.4"
+log = "0.4"
+env_logger = "0.8"
