--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [dependencies]
 teloxide = { version = "0.4", features = ["auto-send", "native-tls"] }
-tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.5", features = ["macros", "rt-multi-thread", "sync"] }
 futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
