--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,11 @@ authors = ["sorz <me@sorz.org>"]
 edition = "2018"
 
 [dependencies]
-teloxide = "0.5"
+teloxide =  { git = "https://github.com/teloxide/teloxide", rev = "818a493a4a55b92f2d3b" }
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
 futures = "0.3"
 lazy_static = "1.4"
 log = "0.4"
-env_logger = "0.8"
+env_logger = "0.9"
 sled = "0.34"
 byteorder = "1.4"
-
-[patch.crates-io]
-teloxide-core = { git = "https://github.com/sorz/teloxide-core", branch = "fix-message-entity-spolier" }
-
