--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["sorz <me@sorz.org>"]
 edition = "2018"
 
 [dependencies]
-teloxide =  { git = "https://github.com/teloxide/teloxide", rev = "818a493a4a55b92f2d3b" }
+teloxide = "0.6"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
 futures = "0.3"
 lazy_static = "1.4"
