--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ log = "0.4"
 env_logger = "0.9"
 sled = "0.34"
 byteorder = "1.4"
+
+[patch.crates-io]
+teloxide-core = { git = "https://github.com/sorz/teloxide-core/", branch = "custom-emoji" }
