--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,11 @@ futures = "0.3"
 lazy_static = "1"
 log = "0.4"
 env_logger = "0.11"
-sled = "0.34"
 byteorder = "1"
+serde = "1"
+sonic-rs = "0.3"
+anyhow = "1"
+regex = "1"
 
+[dev-dependencies]
+tempfile = "3"
